# Real-Time-Data-Visualization

./: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
